data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_677.wast
;; 8. **Test 8: Incorrect Condition Evaluation by Stack Polymorphism**    - Create a `br_if` condition with multiple stack operations (push and pop) performed before evaluating the condition instruction. Validate correct stack management and condition evaluation.    - **Constraint Checked**: Polymorphic behavior of the stack during condition evaluation.

(assert_invalid
  (module
    (func $stack-polymorphism-with-br_if
      (block (result i32)
        (i32.const 42)
        (i32.const 0)
        (br_if 0)
        (i32.const 1)
      )
      (i32.eqz) (drop)
    )
  )
  "type mismatch"
)